<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />
        <!--<variable
            name="form"
            type="edu.aku.hassannaqvi.mncahservices.models.Form" />-->
        <variable
            name="callback"
            type="edu.aku.hassannaqvi.covid_dadu.ui.sections.SectionDActivity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/GrpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- kcs2q4  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVkcs2q4"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom">

                        <TextView
                            android:id="@+id/qtxt_kcs2q4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/q_kcs2q4"
                            android:text="@string/kcs2q4" />

                        <TextView
                            android:id="@+id/q_kcs2q4"
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@id/qtxt_kcs2q4"
                            android:layout_alignBottom="@id/qtxt_kcs2q4"
                            android:text="@string/Q_kcs2q4" />
                    </RelativeLayout>

                    <RadioGroup
                        android:id="@+id/kcs2q4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/kcs2q4y"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kcs2q4y" />

                        <RadioButton
                            android:id="@+id/kcs2q4n"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kcs2q4n" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- kcs2q4_title  CheckBox   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVkcs2q4_title"
                style="@style/cardView"
                android:visibility='@{kcs2q4y.checked ? View.VISIBLE : View.GONE}'>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom">

                        <TextView
                            android:id="@+id/qtxt_kcs2q4_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/q_kcs2q4_title"
                            android:text="@string/kcs2q4_title" />

                        <TextView
                            android:id="@+id/q_kcs2q4_title"
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@id/qtxt_kcs2q4_title"
                            android:layout_alignBottom="@id/qtxt_kcs2q4_title"
                            android:text="@string/Q_kcs2q4_title" />
                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/kcs2q4_titlecheck"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:tag="0">

                        <CheckBox
                            android:id="@+id/kcs2q401"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kcs2q401" />

                        <CheckBox
                            android:id="@+id/kcs2q402"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kcs2q402" />

                        <CheckBox
                            android:id="@+id/kcs2q403"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kcs2q403" />

                        <CheckBox
                            android:id="@+id/kcs2q404"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kcs2q404" />

                        <CheckBox
                            android:id="@+id/kcs2q405"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kcs2q405" />

                        <CheckBox
                            android:id="@+id/kcs2q406"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kcs2q406" />

                        <CheckBox
                            android:id="@+id/kcs2q407"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kcs2q407" />

                        <CheckBox
                            android:id="@+id/kcs2q408"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kcs2q408" />

                        <CheckBox
                            android:id="@+id/kcs2q4096"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kcs2q4096" />

                        <EditText
                            android:id="@+id/kcs2q4096x"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/kcs2q4096"
                            android:tag="kcs2q4096"
                            android:text='@{kcs2q4096.checked ? kcs2q4096x.getText().toString() : ""}'
                            android:visibility='@{kcs2q4096.checked? View.VISIBLE : View.GONE}'
                            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"/>

                        <CheckBox
                            android:id="@+id/kcs2q4010"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kcs2q4010" />

                        <CheckBox
                            android:id="@+id/kcs2q4011"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kcs2q4011" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- kcs2q5  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVkcs2q5"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom">

                        <TextView
                            android:id="@+id/qtxt_kcs2q5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/q_kcs2q5"
                            android:text="@string/kcs2q5" />

                        <TextView
                            android:id="@+id/q_kcs2q5"
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@id/qtxt_kcs2q5"
                            android:layout_alignBottom="@id/qtxt_kcs2q5"
                            android:text="@string/Q_kcs2q5" />
                    </RelativeLayout>

                    <RadioGroup
                        android:id="@+id/kcs2q5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/kcs2q5y"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kcs2q5y" />

                        <RadioButton
                            android:id="@+id/kcs2q5n"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kcs2q5n" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- kcs2q5_title  CheckBox   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVkcs2q5_title"
                style="@style/cardView"
                android:visibility='@{kcs2q5y.checked ? View.VISIBLE : View.GONE}'>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom">

                        <TextView
                            android:id="@+id/qtxt_kcs2q5_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/q_kcs2q5_title"
                            android:text="@string/kcs2q5_title" />

                        <TextView
                            android:id="@+id/q_kcs2q5_title"
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@id/qtxt_kcs2q5_title"
                            android:layout_alignBottom="@id/qtxt_kcs2q5_title"
                            android:text="@string/Q_kcs2q5_title" />
                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/kcs2q5_titlecheck"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:tag="0">

                        <CheckBox
                            android:id="@+id/kcs2q501"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kcs2q501" />

                        <CheckBox
                            android:id="@+id/kcs2q502"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kcs2q502" />

                        <CheckBox
                            android:id="@+id/kcs2q503"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kcs2q503" />

                        <CheckBox
                            android:id="@+id/kcs2q504"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kcs2q504" />

                        <CheckBox
                            android:id="@+id/kcs2q505"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kcs2q505" />

                        <CheckBox
                            android:id="@+id/kcs2q506"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kcs2q506" />

                        <CheckBox
                            android:id="@+id/kcs2q507"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kcs2q507" />

                        <CheckBox
                            android:id="@+id/kcs2q508"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kcs2q508" />

                        <CheckBox
                            android:id="@+id/kcs2q5096"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kcs2q5096" />

                        <EditText
                            android:id="@+id/kcs2q5096x"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/kcs2q5096"
                            android:tag="kcs2q5096"
                            android:text='@{kcs2q5096.checked ? kcs2q5096x.getText().toString() : ""}'
                            android:visibility='@{kcs2q5096.checked? View.VISIBLE : View.GONE}'
                            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"/>

                        <CheckBox
                            android:id="@+id/kcs2q5010"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kcs2q5010" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <!--EndButton LinearLayout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_End"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:background="@color/red_overlay"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="Cancel"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_Continue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:background="@color/green_overlay"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:text="Save"
                    android:textColor="@color/white" />
            </LinearLayout>
            <!--EndButton LinearLayout-->


        </LinearLayout>

    </ScrollView>

</layout>